@@ -1,8 +1,9 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
-- 06-30-04: Fixed setting XP Multis too high causes crash. Limit is 2147483647. [AlexKreuz]
-- 06-30-04: Fixed LOV dmg calculation. Superstats Integer Overflow. [AlexKreuz]
+- 07-01-04: Fixed #1037 - Minor registration errors with addplayer.txt & _M/_F. [AlexKreuz]
+- 07-01-04: Fixed setting XP Multis too high causes crash. Limit is 2147483647. [AlexKreuz]
+- 07-01-04: Fixed LOV dmg calculation. Superstats Integer Overflow. [AlexKreuz]
 - 06-30-04: Fixed #1024 - Adding new accounts can create duplicate usage of id. [AlexKreuz]
 - 06-30-04: Stability fix regarding JCon Delete. [AlexKreuz]
 - 06-30-04: Minor JCon Accounts display fix. [AlexKreuz]
